# Prism

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  bug.md  plan.md  test_dummy.cpp
benchmarks/: AnyTLSFrameBench.cpp  CMakeLists.txt  CodecBench.cpp  ConnectPoolBench.cpp  CryptoBench.cpp  CryptoMiscBench.cpp  DnsMessageBench.cpp  H2MuxBench.cpp  IOBench.cpp  InfraBench.cpp  LatencyBench.cpp  MemoryBench.cpp  MuxBench.cpp  MuxConnBench.cpp  ProtocolBench.cpp  RealityAuthBench.cpp  RealityBench.cpp  RecognitionBench.cpp  RecognitionPipeBench.cpp  RegressionBench.cpp  ResolveBench.cpp  ResourceBench.cpp  ScaleBench.cpp  SessionBench.cpp  Socks5FrameBench.cpp  SsAntiReplayBench.cpp  StealthBench.cpp  StealthExtBench.cpp  TlsFrameBench.cpp  TrustTunnelBench.cpp  TunnelBench.cpp  codec_bench.cpp  mux_bench.cpp
src/: CMakeLists.txt  configuration.json  main.cpp
src/forward-engine/: CMakeLists.txt
src/forward-engine/agent/: CMakeLists.txt  analysis.cpp  balancer.cpp  conduit.cpp  connection.cpp  distribute.cpp  distributor.cpp  frame.cpp  handler.cpp  listener.cpp  source.cpp
src/forward-engine/channel/: CMakeLists.txt  health.cpp
src/forward-engine/crypto/: CMakeLists.txt
src/forward-engine/http/: header.cpp  request.cpp  response.cpp  serialization.cpp
src/forward-engine/multiplex/: CMakeLists.txt  core.cpp  duct.cpp  parcel.cpp
src/forward-engine/protocol/: CMakeLists.txt  analysis.cpp  frame.cpp
src/forward-engine/resolve/: CMakeLists.txt  cache.cpp  packet.cpp  recursor.cpp  resolver.cpp  router.cpp  rules.cpp
src/forward-engine/rule/: CMakeLists.txt  blacklist.cpp
src/forward-engine/trace/: CMakeLists.txt  monitor.cpp  spdlog.cpp
src/forward-engine/transport/: CMakeLists.txt  positive.cpp  reverse.cpp  source.cpp
src/prism/: CMakeLists.txt
stresses/: ArenaOverflowStress.cpp  CMakeLists.txt  MemoryStress.cpp  MuxStress.cpp  PoolContentionStress.cpp  arena_overflow_stress.cpp  counting_resource.hpp  memory_stress.cpp  mux_stress.cpp  pool_contention_stress.cpp
test/: CMakeLists.txt  connection_test.cpp  glaze_test.cpp  header.cpp  integration_test.cpp  json_test.cpp  log.cpp  main_test.cpp  obscura.cpp  request.cpp  session.cpp  socks5_test.cpp  spdlog_test.cpp  trojan_client_test.cpp  trojan_test.cpp
test/benchmark/: CMakeLists.txt  codec_bench.cpp  memory_bench.cpp
test/concurrency/: CmakeLists.txt  USAGE.md  client.cpp  conversation.hpp  handler.hpp  server.cpp  server.hpp  server.json
test/stress/: CMakeLists.txt  arena_overflow_stress.cpp  counting_resource.hpp  memory_stress.cpp  pool_contention_stress.cpp
tests/: AccountDirectory.cpp  AccountDirectoryPure.cpp  Aead.cpp  AeadDeep.cpp  AeadHkdf.cpp  AnytlsFrameParse.cpp  AnytlsPadding.cpp  AnytlsPaddingPure.cpp  AnytlsScheme.cpp  AnytlsSchemeDeep.cpp  AnytlsSchemeDeep2.cpp  AnytlsSchemeExtended.cpp  AnytlsSessionDeep.cpp  Balancer.cpp  BalancerDeep.cpp  BalancerPure.cpp  Base64Encode.cpp  Blake3.cpp  Block.cpp  BlockDeep.cpp  CMakeLists.txt  Config.cpp  ConnectPure.cpp  Connection.cpp  Crypto.cpp  CryptoErrorPaths.cpp  CryptoPure.cpp  DatagramUtilPure.cpp  DetectionPipeline.cpp  DialPure.cpp  DnsCache.cpp  DnsCacheDeep.cpp  DnsCacheExtended.cpp  DnsFormat.cpp  DnsFormatDeep.cpp  DnsFormatPure.cpp  DnsPacket.cpp  DnsResolverPure.cpp  DnsRules.cpp  DnsRulesDeep.cpp  (+191 more)
tests/common/: MockTlsServer.hpp  MockTransport.hpp  TestRunner.hpp  fixtures.hpp  gtest_main.cpp  test_runner.hpp
tests/concurrency/: CMakeLists.txt  client.cpp  conversation.hpp  handler.hpp  server.cpp  server.hpp
tests/config/: CMakeLists.txt  validator.cpp
tests/connect/: CMakeLists.txt  ConnectPure.cpp  DatagramUtilPure.cpp  DialPure.cpp  ForwardTest.cpp  HealthDeep.cpp  PoolDeep.cpp  PoolDeep2.cpp  PoolDeep3.cpp  PoolDeep4.cpp  PoolExtendedPure.cpp  PoolPure.cpp  RacerPure.cpp  TunnelTest.cpp
tests/crypto/: Aead.cpp  AeadDeep.cpp  AeadHkdf.cpp  Blake3.cpp  Block.cpp  BlockDeep.cpp  CMakeLists.txt  Crypto.cpp  CryptoErrorPaths.cpp  CryptoPure.cpp  Hkdf.cpp  X25519.cpp
tests/foundation/: CMakeLists.txt  registry.cpp
tests/infrastructure/: AccountDirectory.cpp  AccountDirectoryPure.cpp  Balancer.cpp  BalancerDeep.cpp  BalancerPure.cpp  Base64Encode.cpp  CMakeLists.txt  Config.cpp  EchDecrypt.cpp  Exception.cpp  Executor.cpp  ExecutorPure.cpp  Fault.cpp  FaultHandling.cpp  FeatureBitmap.cpp  FeatureBitmapExtended.cpp  MemoryArena.cpp  PipelinePrimitives.cpp  RuntimeDeep.cpp  RuntimeStatePure.cpp  RuntimeStatsDeep.cpp  SchemeRouteTable.cpp  Stats.cpp  StatsExtended.cpp  StatsRuntimePure.cpp  Trace.cpp  TracePrefixCoro.cpp  TraceSpdlogDeep.cpp  TraceSpdlogPure.cpp  TrafficDeep.cpp  TrafficStateDeep.cpp  TrafficStatePure.cpp
tests/instance/: CMakeLists.txt  Connection.cpp  GracefulShutdown.cpp  HandshakeTimeout.cpp  LaunchDeep.cpp  LaunchPure.cpp  ListenerMakeAffinity.cpp  ListenerPure.cpp  Session.cpp  Transmission.cpp  WorkerDeep.cpp  WorkerTlsDeep.cpp
tests/integration/: CMakeLists.txt  E2E.cpp  Regression.cpp
tests/multiplex/: CMakeLists.txt
tests/outbound/: CMakeLists.txt  dial.cpp
tests/protocol/: CMakeLists.txt
tests/recognition/: CMakeLists.txt  DetectionPipeline.cpp  ProbeAnalyzerPure.cpp  ProtocolAnalysis.cpp  ProtocolToString.cpp  Recognition.cpp  Target.cpp  TlsHello.cpp  TlsHelloDeep.cpp  TlsHelloPure.cpp  TlsRecord.cpp  TlsRecordPure.cpp  TlsSignal.cpp  TlsSignalParse.cpp  TlsSignalParseExt.cpp
tests/resolve/: CMakeLists.txt  DnsCache.cpp  DnsCacheDeep.cpp  DnsCacheExtended.cpp  DnsFormat.cpp  DnsFormatDeep.cpp  DnsFormatPure.cpp  DnsPacket.cpp  DnsResolverPure.cpp  DnsRules.cpp  DnsRulesDeep.cpp  DnsRulesDeep3.cpp  DnsRulesPure.cpp  DnsUpstreamDeep.cpp  DnsUpstreamPure.cpp  DnsUpstreamPure2.cpp  ResolverBlacklistDeep.cpp  ResolverPure.cpp  ResolverPure2.cpp  RouteTablePure.cpp  RouterDeep.cpp  TargetResolvePure.cpp  UpstreamDeep.cpp  UpstreamSettersPure.cpp
tests/stealth/: CMakeLists.txt
tests/transport/: CMakeLists.txt  EncryptedTest.cpp  PreviewDeep.cpp  PreviewTransport.cpp  TransportLayer.cpp
tests/worker/: CMakeLists.txt  resources.cpp
(+1408 files in other folders)
